# xbrl_api_client

./: .env  .gitignore  CLAUDE.md  Cargo.toml  readme.md
.github/workflows/: rust.yml
scripts/: check_coverage.bat  check_coverage.sh
src/: lib.rs  main.rs
src/api/: client.rs  endpoints.rs  mod.rs  models.rs
src/data/: facts.rs  mod.rs  reports.rs  taxonomy.rs
src/utils/: errors.rs
tests/: integration_tests.rs  library_test.rs  main_tests.rs  models_test.rs  unit_tests.rs
tests/mock_data/: concept_details.json  concepts.json  dimensions.json  facts.json  network_details.json  networks.json  reports.json  search_results.json  taxonomies.json
tests/mocks/: mod.rs  server.rs
