[package]
name = "xbrl_api_client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.15", features = ["json"] }
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
wiremock = "0.6.3"
dotenv = "0.15.0"
mockall = "0.12.1"

[package.metadata.tarpaulin]
# Configure tarpaulin for coverage reporting
out-type = ["Xml", "Json"]
output-dir = "coverage"
# Exclude test files from coverage calculation
exclude-files = [
    "tests/*",
    "**/test_*.rs"
]
# Run in verbose mode
verbose = true
